--- a/css/skin.css
+++ b/css/skin.css
@@ -151,7 +151,7 @@ h6{
 a, 
 p a,
 .box a:not(.button){
-	color: #0cbacf;
+	color: #faa41a;
 }
 .sidebar .widget a,
 .shop .product-summary a,
@@ -182,7 +182,7 @@ p a:hover,
 .footer .footer-bottom a:hover,
 .shop .product-summary a:hover,
 .shop .cart-overview a:hover{
-	color: #0cbacf;
+	color: #faa41a;
 }
 a[class*="icon-"]:hover{
 	text-decoration: none;
