--- a/css/skin.css
+++ b/css/skin.css
@@ -1,8 +1,6 @@
 /*------------------------------------------------------------------
-Sartre Base Skin
-Version: 1.0.3;
-Author: ThemeMountain
-Copyright: ThemeMountain
+--QikGrub
+--VectorX Technologies
 
 [Table of contents]
 
